idf_component_register(SRCS "esp32-april-tags.c" "apriltag/apriltag.c" "apriltag/apriltag_pose.c" "apriltag/apriltag_quad_thresh.c" "apriltag/common/g2d.c" "apriltag/common/getopt.c" "apriltag/common/homography.c" "apriltag/common/image_u8.c" "apriltag/common/image_u8x3.c" "apriltag/common/image_u8x4.c" "apriltag/common/matd.c" "apriltag/common/pam.c" "apriltag/common/pjpeg-idct.c" "apriltag/common/pjpeg.c" "apriltag/common/pnm.c" "apriltag/common/string_util.c" "apriltag/common/svd22.c" "apriltag/common/time_util.c" "apriltag/common/unionfind.c" "apriltag/common/workerpool.c" "apriltag/common/zarray.c" "apriltag/common/zhash.c" "apriltag/common/zmaxheap.c" "apriltag/tag16h5.c" "apriltag/tag25h9.c" "apriltag/tag36h11.c" "apriltag/tagCircle21h7.c" "apriltag/tagCircle49h12.c" "apriltag/tagCustom48h12.c" "apriltag/tagStandard41h12.c" "apriltag/tagStandard52h13.c"
                    INCLUDE_DIRS ".")

